--- a/resnet_study.ipynb
+++ b/resnet_study.ipynb
@@ -20,7 +20,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "__all__=['ResNet','resnet18','resnet34','resnet50','resnet101','resnet152']"
+    "__all__ = ['ResNet', 'resnet18', 'resnet34', 'resnet50', 'resnet101',\n",
+    "           'resnet152']\n",
+    "\n",
+    "\n",
+    "model_urls = {\n",
+    "    'resnet18': 'https://download.pytorch.org/models/resnet18-5c106cde.pth',\n",
+    "    'resnet34': 'https://download.pytorch.org/models/resnet34-333f7ec4.pth',\n",
+    "    'resnet50': 'https://download.pytorch.org/models/resnet50-19c8e357.pth',\n",
+    "    'resnet101': 'https://download.pytorch.org/models/resnet101-5d3b4d8f.pth',\n",
+    "    'resnet152': 'https://download.pytorch.org/models/resnet152-b121ed2d.pth',\n",
+    "}\n"
    ]
   },
   {
@@ -29,13 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model=urls={\n",
-    "    'resnet18': 'https://download.pytorch.org/models/resnet18-5c106cde.pth',\n",
-    "    'resnet34': 'https://download.pytorch.org/models/resnet34-333f7ec4.pth',\n",
-    "    'resnet50': 'https://download.pytorch.org/models/resnet50-19c8e357.pth',\n",
-    "    'resnet101': 'https://download.pytorch.org/models/resnet101-5d3b4d8f.pth',\n",
-    "    'resnet152': 'https://download.pytorch.org/models/resnet152-b121ed2d.pth',\n",
-    "}"
+    "def conv3x3(in_place, out_planes, stride =1):\n",
+    "    return nn.Conv2d(in_place, out_planes, kernel_size=3, stride = stride, padding=1, bias=False)"
    ]
   },
   {
@@ -44,22 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define 3x3 convolution filter before make ResNet   \n",
-    "\n",
-    "def conv3x3(in_planes, out_planes, stride=1, bias=False):\n",
-    "    \"\"\"3x3 convolution with padding\"\"\"\n",
-    "    return nn.Conv2d(in_planes, out_planes, kernel_size=3, stride=stride,\n",
-    "                     padding=1, bias=bias)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#what is downsample? \n",
-    "\n",
     "class BasicBlock(nn.Module):\n",
     "    expansion = 1\n",
     "    \n",
@@ -68,11 +57,12 @@
     "        self.conv1 = conv3x3(inplanes, planes, stride)\n",
     "        self.bn1 = nn.BatchNorm2d(planes)\n",
     "        self.relu = nn.ReLU(inplace=True)\n",
-    "        self.conv2 = conv3x3(planes, planes)\n",
+    "        \n",
+    "        self.conv2= conv3x3(planes, planes)\n",
     "        self.bn2 = nn.BatchNorm2d(planes)\n",
     "        self.downsample = downsample\n",
     "        self.stride = stride\n",
-    "    \n",
+    "        \n",
     "    def forward(self, x):\n",
     "        residual = x\n",
     "        \n",
@@ -85,38 +75,41 @@
     "        \n",
     "        if self.downsample is not None:\n",
     "            residual = self.downsample(x)\n",
-    "        \n",
+    "            \n",
     "        out += residual\n",
     "        out = self.relu(out)\n",
     "        \n",
     "        return out\n",
-    "\n",
-    "\n",
+    "    \n",
+    "            \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Bottleneck(nn.Module):\n",
     "    expansion = 4\n",
     "    \n",
-    "    def __init__(self, inplanes, planes, stride = 1, downsample=None):\n",
+    "    def __init__(self, inplanes, planes, stride=1, downsample = None):\n",
     "        super(Bottleneck, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(inplanes, planes, kernel_size = 1, bias=False)\n",
+    "        self.conv1 = nn.Conv2d(inplanes, planes, kernel_size=1, bias=False)\n",
     "        self.bn1 = nn.BatchNorm2d(planes)\n",
+    "        \n",
     "        self.conv2 = nn.Conv2d(planes, planes, kernel_size = 3, stride = stride, padding=1, bias=False)\n",
     "        self.bn2 = nn.BatchNorm2d(planes)\n",
-    "        self.conv3 = nn.Conv2d(planes, planes * 4, kernel_size=1, bias = False)\n",
-    "        self.bn3 = nn.BatchNorm2d(planes * 4)\n",
-    "        self.relu = nn.ReLU(inplace = True)\n",
+    "        \n",
+    "        self.conv3 = nn.Conv2d(planes, planes * self.expansion, kernel_size=1, bias=False)\n",
+    "        self.bn3 = nn.BatchNorm2d( planes * self.expansion)\n",
+    "        \n",
+    "        self.relu =nn.ReLU(inplace=True)\n",
     "        self.downsample = downsample\n",
     "        self.stride = stride\n",
-    "    \n",
-    "    def forward(self, x):\n",
+    "        \n",
+    "    def forward(self,x):\n",
     "        residual = x\n",
     "        \n",
     "        out = self.conv1(x)\n",
@@ -138,12 +131,14 @@
     "        \n",
     "        return out\n",
     "    \n",
+    "        \n",
+    "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,11 +147,12 @@
     "    def __init__(self, block, layers, num_classes = 1000):\n",
     "        super(ResNet, self).__init__()\n",
     "        self.inplanes = 64\n",
+    "        self.conv1 = nn.Conv2d(3, self.inplanes, kernel_size=7, stride =2, padding =3, bias = False)\n",
+    "        self.bn1 = nn.BatchNorm2d(self.inplanes)\n",
+    "        self.relu=nn.ReLU(True)\n",
     "        \n",
-    "        self.conv1 = nn.Conv2d(3,64, kernel_size=7, stride=2, padding=3, bias=False)\n",
-    "        self.bn1 = nn.BatchNorm2d(64)\n",
-    "        self.relu = nn.ReLU(inplace=True)\n",
     "        self.maxpool = nn.MaxPool2d(kernel_size=3, stride=2, padding=1)\n",
+    "        \n",
     "        self.layer1 = self._make_layer(block, 64, layers[0])\n",
     "        self.layer2 = self._make_layer(block, 128, layers[1], stride=2)\n",
     "        self.layer3 = self._make_layer(block, 256, layers[2], stride=2)\n",
@@ -168,59 +164,88 @@
     "        for m in self.modules():\n",
     "            if isinstance(m, nn.Conv2d):\n",
     "                n = m.kernel_size[0] * m.kernel_size[1] * m.out_channels\n",
-    "                m.weight.data.normal_(0, math.sqrt(2./n))\n",
+    "                m.weight.data.normal_(0, math.sqrt(2. / n ))\n",
     "            elif isinstance(m, nn.BatchNorm2d):\n",
     "                m.weight.data.fill_(1)\n",
     "                m.bias.data.zero_()\n",
-    "    \n",
-    "    \n",
-    "    def _make_layer(self,block, planes, blocks, stride=1):\n",
+    "     \n",
+    "    def _make_layer(self, block, planes, blocks, stride=1):\n",
     "        downsample = None\n",
-    "        if stride != 1 or self.inplanes != planes * block.expansion:\n",
+    "        \n",
+    "        if stride !=1 or self.inplanes != planes * block.expansion:\n",
     "            downsample = nn.Sequential(\n",
-    "                nn.Conv2d(self.inplanes, planes * block.expansion,\n",
-    "                          kernel_size =1, stride=stride, bias=False),\n",
+    "                nn.Conv2d(self.inplanes, planes * block.expansion, kernel_size=1, stride=stride, bias = False),\n",
     "                nn.BatchNorm2d(planes * block.expansion),\n",
     "            )\n",
+    "           \n",
     "        layers = []\n",
-    "        #아까 만든 BasicBlock와 Bottleneck을 이용해서 layer를 만듬\n",
-    "        layers.append(block(self.inplanes, planes, stride, downsample))\n",
+    "        layers.append ( block(self.inplanes, planes, stride, downsample) )\n",
     "        self.inplanes = planes * block.expansion\n",
+    "        \n",
     "        for i in range(1, blocks):\n",
     "            layers.append(block(self.inplanes, planes))\n",
-    "        \n",
+    "           \n",
     "        return nn.Sequential(*layers)\n",
     "    \n",
-    "    def forward(self, x):\n",
+    "    \n",
+    "    def forward(self,x):\n",
+    "        print(x.shape)\n",
     "        x = self.conv1(x)\n",
+    "        print(x.shape)\n",
     "        x = self.bn1(x)\n",
     "        x = self.relu(x)\n",
     "        x = self.maxpool(x)\n",
+    "        print(x.shape)\n",
     "        \n",
     "        x = self.layer1(x)\n",
+    "        print(x.shape)\n",
     "        x = self.layer2(x)\n",
+    "        print(x.shape)\n",
     "        x = self.layer3(x)\n",
+    "        print(x.shape)\n",
     "        x = self.layer4(x)\n",
+    "        print(x.shape)\n",
+    "        \n",
     "        \n",
     "        x = self.avgpool(x)\n",
     "        x = x.view(x.size(0), -1)\n",
     "        x = self.fc(x)\n",
     "        \n",
     "        return x\n",
-    "    "
+    "        \n",
+    "        \n",
+    "        \n",
+    "     \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = ResNet(block = BasicBlock, layers =[2, 2, 2, 2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 224, 224])\ntorch.Size([1, 64, 112, 112])\ntorch.Size([1, 64, 56, 56])\ntorch.Size([1, 64, 56, 56])\ntorch.Size([1, 128, 28, 28])\ntorch.Size([1, 256, 14, 14])\ntorch.Size([1, 512, 7, 7])\ntorch.Size([1, 1000])\n"
+     ]
+    }
+   ],
    "source": [
-    "def resnet18(pretrained=False, **kwargs):\n",
-    "    model = ResNet(BasicBlock, [2,2,2,2], **kwargs)\n",
-    "    if pretrained:\n",
-    "        model.load_state_dict(model_zoo.load_url(model_urls['resnet18']))\n",
-    "    return model"
+    "value = torch.Tensor(1,3,224,224)\n",
+    "out = layer(value)\n",
+    "\n",
+    "print(out.shape)"
    ]
   },
   {
@@ -228,84 +253,7 @@
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def resnet50(pretrained=False, **kwargs):\n",
-    "    model = ResNet(Bottleneck, [3,4,6,3], **kwargs)\n",
-    "    if pretrained:\n",
-    "        model.load_state_dict(model_zoo.load_url(model_urls['resnet50']))\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resnet = resnet50(pretrained=False, num_classes = 500).cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "value = None\n",
-    "value = torch.Tensor(4,3,224,224).cuda()\n",
-    "out = resnet(value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 500])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 500])"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
