change README.md and fix example

--- a/tiny-imagenet-ResNet.ipynb
+++ b/tiny-imagenet-ResNet.ipynb
@@ -16,14 +16,13 @@
     "from torchvision import datasets as dsets\n",
     "from torchvision import transforms\n",
     "\n",
-    "import torchvision.models.resnet as resnet\n",
+    "import resnet\n",
     "\n",
     "from matplotlib.pyplot import imshow\n",
     "%matplotlib inline\n",
     "\n",
     "import visdom\n",
     "import math\n",
-    "import vgg\n",
     "import numpy as np"
    ]
   },
